@@ -20,6 +20,16 @@
 #==============================================================
 #
 #
+EDT_CL-R2-3-0:      Major changes to the IP900CL-12B camera support
+		    Added option start data acquisition of images
+	            and save them to a given directory when
+	            finished. A sequencer disables the camera trigger
+		    while files are being saved.
+		    The image buffer is now per IOC, not per camera,
+		    which means only one camera can perform a DAQ.
+		    A DAQ is triggered by an EVR event (default to
+	  	    event 16 - 0.5Hz).
+
 EDT_CL-R2-2-2:      Modified release file to follow eco.
                     needed to define macros for min() and max()
                     as these were removed from EPICS BASE R3-14-11 and
